Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ footer{
 
 <header class="fade">
     <!-- LOGO -->
-    <img src="logo.png" alt="Logo Mentor">
+    <img src="Logo.png" alt="Logo Mentor">
 
     <h1>Painel do Mentor</h1>
     <p>Organização estratégica das aulas de Crédito Consignado</p>
@@ -210,3 +210,4 @@ document.querySelectorAll('.fade').forEach((el,i)=>{
 
 </body>
 </html>
+
