--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Painel do Mentor | Crédito Consignado</title>
 
+<!-- FAVICON -->
+<link rel="icon" type="image/png" href="favicon.png">
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -210,4 +213,5 @@ document.querySelectorAll('.fade').forEach((el,i)=>{
 
 </body>
 </html>
+
 
